re PR c++/7053 (ICE when declaring a function already defined as a friend method of a template class)

PR c++/7053
	* pt.c (unregister_specialization): Rename to ...
	(reregister_specialization): ... this.
	(tsubst_friend_function): Use it.
	(regenerate_decl_from_template): Likewise.

	PR c++/7053
	* g++.dg/template/friend20.C: New test.

From-SVN: r69349